@@ -1647,6 +1647,12 @@ public class SplitDockStation extends SecureContainer implements Dockable, DockS
 	}
 
 	public DockStationDropLayer[] getLayers(){
+    	// do not support drag and drop if the component is invisible 
+    	Component component = getComponent();
+    	if( component.getWidth() <= 0 || component.getHeight() <= 0 ){
+    		return new DockStationDropLayer[]{};
+    	}
+
 		return new DockStationDropLayer[]{
 				new DefaultDropLayer( this ),
 				new SplitOverrideDropLayer( this ),
