@@ -1092,3 +1092,4 @@
 - API: drag and drop operation can be cancelled by pressing CControl.KEY_CANCEL_OPERATION (default is ESCAPE)
 - API: refined behavior of ActionContentModifier, if a modifier represents many properties (e.g. disabled and vertical) then it can have many backup modifiers (e.g. just 'disabled' or just 'vertical')
 - Bugfix: many small fixes by Karl-Philipp Richter
+- Bugfix: DockStations having width or height smaller or equal to 0 do no longer support drag and drop (because they are invisible to the user)
